# music-player

./: .gitignore  README.md  roadmap.md
docs/: architecture.md
infra/aws/lambda/: play_stats_handler.py
scripts/: load.sql
src/: CMakeLists.txt  addentrydialog.cpp  addentrydialog.h  addentrydialog.ui  addfielddialog.cpp  addfielddialog.h  addfielddialog.ui  artworkutils.h  audioplayer.cpp  audioplayer.h  checksumcalculator.cpp  checksumcalculator.h  cloudplaystatssynccoordinator.cpp  cloudplaystatssynccoordinator.h  cloudplaystatssyncservice.cpp  cloudplaystatssyncservice.h  columndefinition.h  columnregistry.cpp  columnregistry.h  databasemanager.cpp  databasemanager.h  dummyaudioplayer.cpp  dummyaudioplayer.h  dummysystemmediainterface.h  efswfilesystemmonitor.cpp  efswfilesystemmonitor.h  fieldeditdialog.cpp  fieldeditdialog.h  fieldeditdialog.ui  fieldvalue.cpp  fieldvalue.h  filesystemcomparer.cpp  filesystemcomparer.h  filesystemmonitor.cpp  filesystemmonitor.h  globalcolumnlayoutmanager.cpp  globalcolumnlayoutmanager.h  gstaudioplayer.cpp  gstaudioplayer.h  ifilesystemmonitor.h  (+84 more)
src/Tests/: CMakeLists.txt  tst_basics.cpp  tst_checksum.cpp  tst_cloudplaystatssynccoordinator.cpp  tst_cloudplaystatssyncservice.cpp  tst_columnlayout.cpp  tst_columnregistry.cpp  tst_databasemanager.cpp  tst_dummyaudioplayer.cpp  tst_dummysystemmediainterface.cpp  tst_fsmonitor.cpp  tst_libraryexpression.cpp  tst_librarysearchdialog_ui.cpp  tst_lyrics.cpp  tst_mainwindow.cpp  tst_parser.cpp  tst_playbackmanager.cpp  tst_playbackqueue.cpp  tst_playbackstate_template.cpp  tst_playercontrol.cpp  tst_playercontrol0.cpp  tst_playlist.cpp  tst_playlisttabs.cpp  tst_settingsdialog_ui.cpp  tst_songlibrary.cpp  tst_songstore.cpp  tst_songtablemodel.cpp
src/Tests/parser_inputs/: .gitignore  README.md  parser_cases.example.json
